--- a/css_coworking.css
+++ b/css_coworking.css
@@ -3,8 +3,6 @@ body, html{
             /*cursor: auto;*/
             font-family: "Times New Roman"
 
-
-
         }
 
         #navbrand{
@@ -193,4 +191,28 @@ body, html{
             text-align: center;
             color: azure;
             padding: 30px;
+        }
+        #btn_register{
+            width: 300px;
+            //height: 30px;
+            color: white;
+            margin-top: 10px;
+        }
+        #registerDiv{
+            position: relative;
+            top: 30%;
+        }
+        #map{
+            background-image: url("map.png");
+            height: 70%;
+        }
+        #map:hover{
+            cursor: pointer;
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('map.png')
+        }
+        .iconsMedia{
+            position: relative;
+            width: 50px;
+            height: 50px;
+
         }
